--- a/v1/web/index.html
+++ b/v1/web/index.html
@@ -101,5 +101,8 @@
       loadMainDartJs();
     }
   </script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9c7c5a1a4a2244e699fade4cab6e7e74"}'></script>
+  <!-- End Cloudflare Web Analytics -->
 </body>
 </html>
