preconnect to the API server

--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,8 @@
   <title>PlanAt Client</title>
   <meta name="description" content="A PlanAt Client built on Flutter">
   <link rel="manifest" href="manifest.json">
-  <link rel="canonical" href="https://app.752628.xyz/">
+  <link rel="canonical" href="https://app.752628.xyz">
+  <link rel="preconnect" href="https://api.752628.xyz">
 </head>
 <body>
   <!-- These elements will be covered after the app is fully loaded -->
