--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,8 @@
   <meta name="apple-mobile-web-app-title" content="Plan@ Client">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Android (Chrome) icons are configured at manifest.json -->
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.ico"/>
 
@@ -32,6 +34,7 @@
   <meta name="description" content="A PlanAt Client built on Flutter">
   <link rel="manifest" href="manifest.json">
   <link rel="canonical" href="https://app.752628.xyz">
+  <!-- Without the pre-connect the browser will run preflight on every request -->
   <link rel="preconnect" href="https://api.752628.xyz">
 </head>
 <body>
